--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
     border-radius: 8px;
 }
 .text-white {
-    color: #007aff;
+    color: #32c671;
     font-size: 15px;
     font-weight: 500
     
@@ -55,7 +55,7 @@ span{
     display: flex;
 }
 .info{
-    color: #48484a;
+    color: #a7a7a7;
     font-size: 10px;
     font-weight: 500;
 }
@@ -64,47 +64,62 @@ span{
     overflow: hidden;
     color: rgba(50,60,71,.4);
 /*background-image: linear-gradient(90deg,#49d6b5,#00a8af);*/
-    background-color: #007bff1a;
+    background-color: #fff;
     /*box-shadow: 0 4px 16px 0 rgba(0,0,0,.06);*/
     border-radius: 12px;
     padding: .75rem;
+   /* background-image: linear-gradient(-90deg, #077a67, #4cccb0);
+filter: drop-shadow(0px 3px 12px rgba(7, 122, 103, 0.502));*/
 
 }
 .true .imgg {
-
+/*
     background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Flat_tick_icon.svg/1024px-Flat_tick_icon.svg.png");
     width: 20px;
     height: 20px;
     background-size: cover;
     margin-right: 8px;
-    margin-top: 1px;
+    margin-top: 1px;*/
+        /*color: #fff;
+    font-size: 20px;
+        margin-right: 8px;
+    margin-top: -3px;*/
+        border-left: 6px solid #35c773!important;
+    border-radius: 6px;
+    margin-right: 13px;
 }
 .false{
             margin: 0.90rem;
     overflow: hidden;
     color: rgba(50,60,71,.4);
 /*background-image: linear-gradient(90deg,#49d6b5,#00a8af);*/
-    background-color: #ff2d551a;
+    background-color: #fff;
     /*box-shadow: 0 4px 16px 0 rgba(0,0,0,.06);*/
     border-radius: 12px;
     padding: .75rem;
+       /* background-image: linear-gradient(-90deg, #791d34, #dd5053);
+filter: drop-shadow(0px 3px 12px rgba(7, 122, 103, 0.502));*/
+    
+
 }
 .false .text-white{
-    color: #ff375f;
+    color: #f44336;
 }
 .false .imgg {
-
+/*
     background-image: url("https://upload.wikimedia.org/wikipedia/commons/c/c9/Exclamation_flat_icon.svg");
     width: 20px;
     height: 20px;
     background-size: cover;
     margin-right: 8px;
-    margin-top: 1px;
+    margin-top: 1px;*/
+        border-left: 6px solid #f44336!important;
+    border-radius: 6px;
+    margin-right: 13px;
 }
 
 .home p{
     font-size: 35px;
     padding: 18px;
     font-weight: 600;
-    margin-top: 40px;
 }
