--- a/css/dark.css
+++ b/css/dark.css
@@ -6,7 +6,7 @@ body {
 }
 
 .dark-mode {
-  background-color: #161616;
+  background-color: #000000;
   color: white;
 }
 .dark-mode .false{
@@ -31,27 +31,32 @@ body {
     margin-right: 8px;
     margin-top: 1px;*/
 }
-.Tweaks .infos{
-    color: #a7a7a7;
+.dark-mode .true .infos{
+    color: #fff;
     font-size: 14px;
     font-weight: 500;
-    width: 100%;
+    width: 76%;
     padding-top: 20px;
-    text-align: center;
+    padding-left: -50px
     
 }
-.dark-mode .Tweaks .text-white {
+.dark-mode .info {
+    color: #fff;
+}
+.dark-mode .info2 {
+    color: #fff;
+}
+.dark-mode .true .text-white {
     color: #fff;
     font-size: 18px;
     font-weight: 500
     
 }
-.Tweaks {
+.dark-mode .true {
         margin: 0.90rem;
     overflow: hidden;
     color: rgba(50,60,71,.4);
-/*background-image: linear-gradient(90deg,#49d6b5,#00a8af);*/
-    background-color: #fff;
+background-image: linear-gradient(90deg,#1c1c1d,#1c1c1d);
     box-shadow: 0 4px 16px 0 rgba(0,0,0,.06);
     border-radius: 12px;
     padding: .75rem;
@@ -59,8 +64,8 @@ body {
 filter: drop-shadow(0px 3px 12px rgba(7, 122, 103, 0.502));*/
 
 }
-.dark-mode .Tweaks {
-    background-color: #1c1c1d !important;
+.dark-mode .true {
+    background-color: #1c1c1c !important;
 
 }
 .dark-mode .Tweaks .imgg {
