--- a/css/dark.css
+++ b/css/dark.css
@@ -1,111 +1,192 @@
-body {
 
-  background-color: white;
-  color: black;
-  font-size: 25px;
+.grid-container {
+  display: grid;
+  grid-template-columns:  auto auto;
+
 }
-
 .dark-mode {
-  background-color: #000000;
-  color: white;
+  background-color: #000;
+
 }
-.dark-mode .false{
-    margin: 0.90rem;
-    overflow: hidden;
-    color: rgba(50,60,71,.4);
-/*background-image: linear-gradient(90deg,#49d6b5,#00a8af);*/
-    background-color: #2a2f33;
-    /*box-shadow: 0 4px 16px 0 rgba(0,0,0,.06);*/
-    border-radius: 12px;
-    padding: .75rem;
+.dark-mode .c1 {
+    background-color: #000;/*
+background-image: linear-gradient(-90deg, #a4adff, #8390ff);
+filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));*/
+    margin-right: 5px;
+    padding: 10px;
+    border-radius: 8px;
+    height: 9em;
+
 }
-.false .text-white{
-    color: #f44336;
+.dark-mode .c1 span.c11{
+    font-weight: 700;
+    color: white;
+    
 }
-.false .imgg {
-/*
-    background-image: url("https://upload.wikimedia.org/wikipedia/commons/c/c9/Exclamation_flat_icon.svg");
-    width: 20px;
-    height: 20px;
+.dark-mode .beta {
+    background-color: #141414;/*
+background-image: linear-gradient(-90deg, #a4adff, #8390ff);
+filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));*/
+    margin: 10px;
+    padding: 10px;
+    border-radius: 8px;
+        height: 4em;
+
+}
+.dark-mode .beta span.c11{
+    font-weight: 700;
+    color: white;
+    
+}
+.dark-mode .bt-1 {
+    color: white;
+}
+
+.dark-mode .bt-2 {
+    color: white;
+}
+.dark-mode .bt-3 {
+    color: white;
+}
+
+.dark-mode .c2{
+    background-color: #000;/*
+    background-image: linear-gradient(-90deg, #88c9ff, #5aa5ff);
+    filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));*/
+    margin-left: 10px;
+    padding: 10px;
+    border-radius: 8px;
+    height: 9em;
+
+}
+.dark-mode .c2 span.c22{
+    font-weight: 700;
+    color: white;
+    
+}
+.dark-mode .c3{
+    background-color: #222222;/*
+background-image: linear-gradient(-90deg, #fa9cf0, #f16edd);
+    filter: drop-shadow(0px 3px 12px rgba(242, 115, 223, 0.502));*/
+    margin: 10px;
+    padding: 10px;
+    border-radius: 8px;
+        height: 4em;
+
+}
+.dark-mode .c4{
+    background-color: #222222;/*
+background-image: linear-gradient(-90deg, #f58383, #ef5756);
+    filter: drop-shadow(0px 3px 12px rgba(239, 90, 90, 0.502));*/
+    margin: 10px;
+    padding: 10px;
+    border-radius: 8px;
+        height: 4em;
+    
+
+}
+span{
+    display: block;
+}
+.dark-mode #Features {
+
+    font-weight: bold;
+    font-size: 35px;
+    margin: 10px;
+        margin-bottom: 1em;
+    margin-top: 1em;
+    color: white;
+}
+
+#home{ /*
+background-image: url(https://i0.wp.com/apps4iphone.net/wp-content/uploads/2019/06/348475-1280-3.jpg?fit=1280%2C1280&ssl=1);*/
+    margin: 10px;
+    border-radius: 10px;
     background-size: cover;
-    margin-right: 8px;
-    margin-top: 1px;*/
-}
-.dark-mode .Release .infos{
-    color: #fff;
-    font-size: 14px;
-    font-weight: 500;
-    width: 76%;
-    padding-top: 20px;
-    padding-left: -50px
-    
-}
-.dark-mode .info {
-    color: #fff;
-}
-.dark-mode .info2 {
-    color: #fff;
-}
-.dark-mode .Release .text-white {
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500
-    
-}
-.dark-mode .Release {
-        margin: 0.90rem;
+    padding: 25px;
+    display: flex;
+    align-items: flex-end;
+    min-height: 140px;
+    margin-bottom: 2em;
+    position: relative;
     overflow: hidden;
-    color: rgba(50,60,71,.4);
-background-image: linear-gradient(90deg,#1c1c1d,#1c1c1d);
-    box-shadow: 0 4px 16px 0 rgba(0,0,0,.06);
-    border-radius: 12px;
-    padding: .75rem;
-   /* background-image: linear-gradient(-90deg, #077a67, #4cccb0);
-filter: drop-shadow(0px 3px 12px rgba(7, 122, 103, 0.502));*/
-
 }
-.dark-mode .Release {
-    background-color: #1c1c1c !important;
-
+#home .wall:before {/*
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background: linear-gradient(rgba(0,0,0,.2),rgba(0,0,0,.9));
+    opacity: .7;
+    transition: opacity .15s ease-out;**/
 }
-.dark-mode .Tweaks {
-    background-color: #1c1c1c !important;
-
+#note{
+    z-index: 1;
+    flex-grow: 1;
+    color: #333;
+    position: relative;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
-.dark-mode .Tweaks .text-white {
-    color: #fff;
+.dark-mode #note .text{
+    z-index: 1;
+    font-weight: bold;
+    font-size: 35px;
+    color: rgb(255, 255, 255); 
+}
+.dark-mode #note .small{
+    z-index: 1;
+    font-weight: 400;
     font-size: 18px;
-    font-weight: 500
+    color: rgb(255, 255, 255); 
     
 }
-.dark-mode .Tweaks .infos{
-    color: #fff;
-    font-size: 14px;
-    font-weight: 500;
-    width: 76%;
-
-    padding-left: -50px
+.dark-mode #note .small2{
+    z-index: 1;
+    font-weight: 400;
+    font-size: 18px;
+    color: rgb(255, 255, 255); 
     
 }
-.dark-mode .Development{
-    background-color: #1c1c1d !important;
+.dark-mode .c11 i{
+    font-size: 20px;
+    color: #e4e3e2;
+    float: right;
 }
-.dark-mode .Development .text-white{
+.dark-mode .c22 i{
+    font-size: 20px;
+    color: #e4e3e2;
+    float: right;
+}
+.dark-mode .mode {
+    background-image: url(https://cdn4.iconfinder.com/data/icons/music-ui-solid-24px/24/sun_light_mode_day-2-128.png);
+    height: 30px;
+    background-size: contain;
+    width: 30px;
+    float: right;
+    margin: 10px;
+}
+.dark-mode #back{
+    padding: 18px;
+    border-radius: 12px;
+    margin: 10px;
+    height: 330px;/*
+    background-size: cover;
+    background: linear-gradient(150deg, #f7ad98 10%, #f642b9 70%);
+    filter: drop-shadow(1px 10px 10px rgba(24, 24, 75));*/
+    background-color: #333333;
+
+}
+.dark-mode .back1{
+    
+    font-weight: 700;
+    color: white;
+}
+.dark-mode .back1 i{
+    font-size: 20px;
     color: #fff;
-    font-size: 15px;
-    font-weight: 500
-}
-
-.dark-mode .Utilities{
-    background-color: #1c1c1d !important;    border-radius: 12px; 
-}
-.dark-mode .Utilities .text-white{
-    color: #DCAA34;
-}
-
-.dark-mode .Networking{
-    background-color: #1c1c1d !important;    border-radius: 12px; 
-}
-.dark-mode .Networking .text-white{
-    color: #64D94C;
+    float: right;
 }
