--- a/css/style.css
+++ b/css/style.css
@@ -1,192 +1,335 @@
 body {
-    background-color: #fff;
-    text-rendering: optimizeLegibility!important;
-    -webkit-font-smoothing: antialiased!important;
-font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"
+font-family: "SF Pro Text";
+        transition: .2s;
+    background-color: #eee;
 }
 
-#homepage-hero .section-body {
-    background-image: -webkit-gradient(linear,left top,right top,from(#49d6b5),to(#00a8af));
-    background-image: linear-gradient(90deg,#49d6b5,#00a8af);
-        padding: 1.25rem;
+.grid-container {
+    display: grid;
+    grid-template-columns:  auto auto;
+    position: relative;
+    top: 5.1em;
 }
 
-.card .section-body {
-    margin-bottom: 1.5rem;
-    overflow: hidden;
-    color: rgba(50,60,71,.4);
-    background: #fff;
-    box-shadow: 0 4px 16px 0 rgba(0,0,0,.06);
+.c1 {
+    /*
+    background-image: url(https://repo-cdn.dynastic.co/322503971522478081.e211f4e1bae20591778b9f76ef6ba1d2);
+    background-size: cover;
+background-image: linear-gradient(-90deg, #a4adff, #8390ff);
+filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));*/
+        background-color: #fff;
+    margin-right: 5px;
+    padding: 10px;
     border-radius: 8px;
-}
+    height: 9em;
 
-blockquote, dd, dl, figure, h1, h3, h4, p, h5, h6, pre {
-    margin: -8px;
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+    
+}
+.c1 span.c11{
+    font-weight: 700;
+    color: black;
+    
+}
+.beta {
+    background-color: #ffffff;/*
+background-image: linear-gradient(-90deg, #a4adff, #8390ff);
+filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));*/
+    margin: 10px;
+    padding: 10px;
+    border-radius: 8px;
+    height: 4em;
+
+}
+.beta span.c11-1{
+    background-color: #c8c8c8;
+    margin-top: 10px;
+    margin-bottom: 10px;
+        margin-left: 15%;
+    width: 30%;
+    height: 0.5em;
+    border-radius: 4px
+    
+}
+.beta span.c11-2{
+    background-color: #c8c8c8;
+    margin-top: 10px;
+    margin-bottom: 10px;
+        margin-left: 15%;
+    width: 50%;
+    height: 0.5em;
+    border-radius: 4px
+    
+}
+.beta span.c11-3{
+    background-color: #c8c8c8;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 15%;
+    height: 0.5em;
+    border-radius: 4px
+    
+}
+img {
+    margin-top: 5px;
+    margin-right: 10px;
+    width: 50px;
+    border-radius: 10px;
+    
+}
+.immgg {
+    position: absolute;
+}
+.c2{
+    background-color: #fff;/*
+    background-image: linear-gradient(-90deg, #88c9ff, #5aa5ff);
+    filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));*/
+    margin-left: 10px;
+    padding: 10px;
+    border-radius: 8px;
+    height: 9em;
+
+}
+.c2 span.c22{
+    font-weight: 700;
+    color: black;
+    
+}
+.c3{
+    background-color: #fff;/*
+background-image: linear-gradient(-90deg, #fa9cf0, #f16edd);
+    filter: drop-shadow(0px 3px 12px rgba(242, 115, 223, 0.502));*/
+    margin: 10px;
+    padding: 10px;
+    border-radius: 8px;
+    height: 4em;
+
+}
+.c4{
+    background-color: #fff;/*
+background-image: linear-gradient(-90deg, #f58383, #ef5756);
+    filter: drop-shadow(0px 3px 12px rgba(239, 90, 90, 0.502));*/
+    margin: 10px;
+    padding: 10px;
+    border-radius: 8px;
+        height: 4em;
+    
+
 }
 span{
     display: block;
-    color: black;
-    font-size: 10px;
-    font-weight: 500;
-    margin-top: -20px;
+}
+#Features {
+
+    font-weight: bold;
+    font-size: 35px;
+    margin: 10px;
+        margin-bottom: 1em;
+    margin-top: 1em;
 }
 
-.flex {
-    display: -webkit-inline-box;
-    width: 100%;
-}
-.info{
-    color: #000;
-    font-size: 15px;
-    font-weight: 300;
-    width: 100%;
+#home{/*
+background-image: url(https://www.setaswall.com/wp-content/uploads/2019/06/Apple-iOS-13-Stock-Wallpaper-01-1242x2208-768x1365.jpg);*/
+    margin: 10px;
+    border-radius: 10px;
+    background-size: cover;
+    padding: 25px;
+    display: flex;
+    align-items: flex-end;
+    min-height: 140px;
+    margin-bottom: 2em;
+    position: relative;
     overflow: hidden;
 }
-.info2{
-    color: #000;
-    font-size: 15px;
-    font-weight: 300;
-
-  overflow-x: hidden;
+#home .wall:before {/*
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background: linear-gradient(rgba(0,0,0,.2),rgba(0,0,0,.9));
+    opacity: .7;
+    transition: opacity .15s ease-out;*/
 }
-.grid-container{
-
-    color: #000;
-    font-size: 15px;
-    font-weight: 300;
-  overflow-x: hidden;
-
+#note{
+    display: none;
+    z-index: 1;
+    flex-grow: 1;
+    color: #333;
+    position: relative;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
-h2{   
-    margin:0;
-    font-size: 12px
-
-}
-i {
+#note .text{
+    z-index: 1;
+    font-weight: bold;
+    font-size: 35px;
+    color: rgb(255, 255, 255); 
     color: black;
-    font-size: 40px;
+}
+#note .small{
+    z-index: 1;
+    font-weight: 400;
+    font-size: 18px;
+    color: rgb(255, 255, 255); 
+    color: #222222;
+    
+}
+#note .small2{
+    z-index: 1;
+    font-weight: 400;
+    font-size: 18px;
+    color: rgb(255, 255, 255); 
+    color: #222222;
+    
+}
+.c11 i{
+    font-size: 20px;
+    color: #8a8a8a;
+    float: right;
+}
+.c22 i{
+    font-size: 20px;
+    color: #8a8a8a;
+    float: right;
+}
+.mode{
+    background-image: url(https://cdn4.iconfinder.com/data/icons/music-ui-solid-24px/24/moon_dark_mode_night-2-512.png);
+        height: 30px;
+    background-size: contain;
+    width: 30px;
+    float: right;
+    margin: 10px;
+
 }
 
-.text1 .text2 .text3 {
-    grid-area: text1;
-    font-size: 17px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.home p{
-    font-size: 30px;
+#back{
     padding: 18px;
-    font-weight: 600;
+    border-radius: 12px;
+    margin: 10px;
+    height: 330px;
+    background-size: cover;
+   /* background: linear-gradient(0deg, #267de6 2%, #69aefc 60%);*/
+    background-color: #eeeeee
 }
-.Release .h3{
-    font-size: 10px;
-}
-.Release .infos{
-    color: #fff;
-    font-size: 14px;
-    font-weight: 400;
-    width: 76%;
-    padding-top: 20px;
+.back1{
     
+        font-weight: 700;
+    color: black;
 }
-.Release .text-white {
+.back1 i{
+    font-size: 20px;
     color: #fff;
-    font-size: 18px;
-    font-weight: 600;
-}
-.Release {
-        margin: 0.9rem;
-        overflow: hidden;
-        color: rgba(50,60,71,.4);
-        background-image: linear-gradient(90deg,#3f3e68,#3f519d);
-        box-shadow: 0 4px 16px 0 rgba(0,0,0,.06) ;
-        border-radius: 12px;
-        padding: 0.75rem;
-        /* background-image: linear-gradient(-90deg, #077a67, #4cccb0);
-filter: drop-shadow(0px 3px 12px rgba(7, 122, 103, 0.502));*/
+    float: right;
 }
 
-.Tweaks .h3{
-    font-size: 10px;
-}
-.Tweaks .infos{
-    color: #000;
-    font-size: 14px;
-    font-weight: 400;
-    width: %;
-    padding-top: px;
+#back .small{
+    z-index: 1;
+    background-color: #dedede;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 50%;
+    height: 0.5em;
+    border-radius: 4px
     
 }
-.Tweaks .text-white {
-    color: #000;
-    font-size: 18px;
-    font-weight: 600;
-    margin: 0px;
+#back .text{
+    z-index: 1;
+    font-weight: bold;
+    background-color: #cacaca;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 70%;
+    height: 0.27em;
+    font-size: 35px;
+    color: rgb(255, 255, 255); 
+    border-radius: 4px
 }
-.Tweaks {
-    margin-bottom: 1px;
-    overflow: hidden;
-    color: rgba(50,60,71,.4);
-    background-color: #ffffff;
-    box-shadow: 0 4px 16px 0 rgba(0,0,0,.06);
-    /* border-radius: 12px; */
+#back .small2{
+    background-color: #dedede;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 90%;
+    height: 0.4em;
+    border-radius: 4px
+    
+}
+.beta {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: start;
+    align-items: flex-start;
+        background-color: #ffffff;/*
+background-image: linear-gradient(-90deg, #a4adff, #8390ff);
+filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));*/
+    margin: 10px;
     padding: 10px;
-}
-
-
-
-.true .h3{
-    font-size: 10px;
-}
-.true .infos{
-    color: #fff;
-    font-size: 14px;
-    font-weight: 400;
-    width: 76%;
-    padding-top: 20px;
-
+    border-radius: 8px;
+    height: 4em;
     
 }
-.true .text-white {
-    color: #fff;
-    font-size: 18px;
+.bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.beta-body {
+    -ms-flex: 1;
+    flex: 1;
+}
+.bt-1{
+   /* background-color: #cacaca;*/
+    margin: 3px;
+    font-size: 15px;
+    font-weight: 800;
+    color: black;
+    
+}
+.bt-2{
+    margin: 3px;
+    font-size: 13px;
+    font-weight: 300;
+    color: black;
+    
+}
+.bt-3{
+    margin: 3px;
+    font-size: 13px;
+    font-weight: 300;
+    color: black;
+    
+}
+.butget {
+    box-shadow: 0 3px 10px rgb(0 122 255 / 0.5);
+    text-decoration: none;
+    box-sizing: border-box;
+    margin: 0;
+    overflow: visible;
+    text-transform: none;
+    display: inline-block;
     font-weight: 600;
+    text-align: center;
+    vertical-align: middle;
+    user-select: none;
+    border: 0px solid transparent;
+    padding: 0.2rem 1.3rem;
+    font-size: 13px;
+    line-height: 1.5;
+    border-radius: 5rem;
+    color: #fff;
+    background-color: #007aff;
+  /*  background: linear-gradient(0deg, #267de6 2%, #69aefc 60%);*/
+    border-color: #007bff;
+    cursor: pointer;
+    float: right;
 }
-.true {
-        margin: 0.9rem;
-        overflow: hidden;
-        color: rgba(50,60,71,.4);
-        background-image: linear-gradient(90deg,#3f3e68,#3f519d);
-        box-shadow: 0 4px 16px 0 rgba(0,0,0,.06) ;
-        border-radius: 12px;
-        padding: 0.75rem;
-        /* background-image: linear-gradient(-90deg, #077a67, #4cccb0);
-filter: drop-shadow(0px 3px 12px rgba(7, 122, 103, 0.502));*/
-}
-
-.true2 {
-        margin: 0.5em;
-        overflow: hidden;
-        color: #076dc6 ;
-        background-color: #076dc6;
-        box-shadow: 0 4px 16px 0 rgba(0,0,0,.06);
-        border-radius: 12px;
-        padding: 0.4em;
-        /* background-image: linear-gradient(-90deg, #077a67, #4cccb0);
-filter: drop-shadow(0px 3px 12px rgba(7, 122, 103, 0.502));*/
-}
-.true .imgg {
-/*
-background-image: url("https://cdn.dribbble.com/users/104117/screenshots/3802691/attachments/858783/iphonex_-dark-.png");
-background-image: url("https://lh3.googleusercontent.com/proxy/hVRUrf_oH9hh0_hBK-pOes2SRKgBM9K1Ll2CnEP-wvo8cm2ga1jPLqwceZEhb_xb6aOgCR7JJBXL4JwGnIUO_aUPF_SjxlFpgsgzByL5rqCB98jftWdlcIsV2QisVxX_1VTBiSvZx_-x20xXO_eLwXDTGA=s0-d");
-height:0px;
-    padding: 33px;
-
-
-background-size: cover;
-width: auto;
-*/
-
-}
-
