--- a/css/dark.css
+++ b/css/dark.css
@@ -30,7 +30,7 @@ filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));*/
     margin: 10px;
     padding: 10px;
     border-radius: 8px;
-        height: 4em;
+        height: em;
 
 }
 .dark-mode .beta span.c11{
