--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,17 @@ filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));*/
     
 }
 .beta {
-    background-color: #ffffff;/*
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: start;
+    align-items: flex-start;
+        background-color: #ffffff;/*
 background-image: linear-gradient(-90deg, #a4adff, #8390ff);
 filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));*/
     margin: 10px;
     padding: 10px;
     border-radius: 8px;
-    height: 4em;
+    height: em;
 
 }
 .beta span.c11-1{
@@ -261,18 +265,18 @@ background-image: url(https://www.setaswall.com/wp-content/uploads/2019/06/Apple
     border-radius: 4px
     
 }
-.beta {
+.beta {/*
     display: -ms-flexbox;
     display: flex;
     -ms-flex-align: start;
     align-items: flex-start;
         background-color: #ffffff;/*
 background-image: linear-gradient(-90deg, #a4adff, #8390ff);
-filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));*/
+filter: drop-shadow(0px 3px 12px rgba(94, 168, 255, 0.502));
     margin: 10px;
     padding: 10px;
     border-radius: 8px;
-    height: 4em;
+    height: 4em;*/
     
 }
 .bd-placeholder-img {
